tests/baselines/reference/declarationEmitLateBoundAssignments2.errors.txt
declarationEmitLateBoundAssignments2.ts(13,1): error TS7053: Element implicitly has an 'any' type because expression of type '"C"' can't be used to index type 'typeof decl2'.
  Property 'C' does not exist on type 'typeof decl2'.
declarationEmitLateBoundAssignments2.ts(19,1): error TS7053: Element implicitly has an 'any' type because expression of type '1' can't be used to index type 'typeof decl4'.
  Property '1' does not exist on type 'typeof decl4'.
declarationEmitLateBoundAssignments2.ts(25,1): error TS7053: Element implicitly has an 'any' type because expression of type '"10"' can't be used to index type 'typeof decl6'.
  Property '10' does not exist on type 'typeof decl6'.
declarationEmitLateBoundAssignments2.ts(31,1): error TS7053: Element implicitly has an 'any' type because expression of type '"foo bar"' can't be used to index type 'typeof decl8'.
  Property 'foo bar' does not exist on type 'typeof decl8'.
declarationEmitLateBoundAssignments2.ts(37,1): error TS7053: Element implicitly has an 'any' type because expression of type '"🤷‍♂️"' can't be used to index type 'typeof decl10'.
  Property '🤷‍♂️' does not exist on type 'typeof decl10'.
declarationEmitLateBoundAssignments2.ts(43,1): error TS7053: Element implicitly has an 'any' type because expression of type '"C"' can't be used to index type '() => void'.
  Property 'C' does not exist on type '() => void'.
declarationEmitLateBoundAssignments2.ts(49,1): error TS7053: Element implicitly has an 'any' type because expression of type '1' can't be used to index type '() => void'.
  Property '1' does not exist on type '() => void'.
declarationEmitLateBoundAssignments2.ts(55,1): error TS7053: Element implicitly has an 'any' type because expression of type '"10"' can't be used to index type '() => void'.
  Property '10' does not exist on type '() => void'.
declarationEmitLateBoundAssignments2.ts(61,1): error TS7053: Element implicitly has an 'any' type because expression of type '"foo bar"' can't be used to index type '() => void'.
  Property 'foo bar' does not exist on type '() => void'.
declarationEmitLateBoundAssignments2.ts(67,1): error TS7053: Element implicitly has an 'any' type because expression of type '"🤷‍♂️"' can't be used to index type '() => void'.
  Property '🤷‍♂️' does not exist on type '() => void'.


==== declarationEmitLateBoundAssignments2.ts (10 errors) ====
    // https://github.com/microsoft/TypeScript/issues/54811
    
    const c = "C"
    const num = 1
    const numStr = "10"
    const withWhitespace = "foo bar"
    const emoji = "🤷‍♂️"
    
    export function decl() {}
    decl["B"] = 'foo'
    
    export function decl2() {}
    decl2[c] = 0
    ~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"C"' can't be used to index type 'typeof decl2'.
!!! error TS7053:   Property 'C' does not exist on type 'typeof decl2'.
    
    export function decl3() {}
    decl3[77] = 0
    
    export function decl4() {}
    decl4[num] = 0
    ~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '1' can't be used to index type 'typeof decl4'.
!!! error TS7053:   Property '1' does not exist on type 'typeof decl4'.
    
    export function decl5() {}
    decl5["101"] = 0
    
    export function decl6() {}
    decl6[numStr] = 0
    ~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"10"' can't be used to index type 'typeof decl6'.
!!! error TS7053:   Property '10' does not exist on type 'typeof decl6'.
    
    export function decl7() {}
    decl7["qwe rty"] = 0
    
    export function decl8() {}
    decl8[withWhitespace] = 0
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"foo bar"' can't be used to index type 'typeof decl8'.
!!! error TS7053:   Property 'foo bar' does not exist on type 'typeof decl8'.
    
    export function decl9() {}
    decl9["🤪"] = 0
    
    export function decl10() {}
    decl10[emoji] = 0
    ~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"🤷‍♂️"' can't be used to index type 'typeof decl10'.
!!! error TS7053:   Property '🤷‍♂️' does not exist on type 'typeof decl10'.
    
    export const arrow = () => {}
    arrow["B"] = 'bar'
    
    export const arrow2 = () => {}
    arrow2[c] = 100
    ~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"C"' can't be used to index type '() => void'.
!!! error TS7053:   Property 'C' does not exist on type '() => void'.
    
    export const arrow3 = () => {}
    arrow3[77] = 0
    
    export const arrow4 = () => {}
    arrow4[num] = 0
    ~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '1' can't be used to index type '() => void'.
!!! error TS7053:   Property '1' does not exist on type '() => void'.
    
    export const arrow5 = () => {}
    arrow5["101"] = 0
    
    export const arrow6 = () => {}
    arrow6[numStr] = 0
    ~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"10"' can't be used to index type '() => void'.
!!! error TS7053:   Property '10' does not exist on type '() => void'.
    
    export const arrow7 = () => {}
    arrow7["qwe rty"] = 0
    
    export const arrow8 = () => {}
    arrow8[withWhitespace] = 0
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"foo bar"' can't be used to index type '() => void'.
!!! error TS7053:   Property 'foo bar' does not exist on type '() => void'.
    
    export const arrow9 = () => {}
    arrow9["🤪"] = 0
    
    export const arrow10 = () => {}
    arrow10[emoji] = 0
    ~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"🤷‍♂️"' can't be used to index type '() => void'.
!!! error TS7053:   Property '🤷‍♂️' does not exist on type '() => void'.
    